--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
-}
+	"version": 2,
+	"buildCommand": "next build",
+	"outputDirectory": ".next"
+  }
