--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-imask": "^7.6.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
