--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@tiptap/extension-color": "^3.6.2",
+    "@tiptap/extension-link": "^3.6.2",
+    "@tiptap/extension-text-align": "^3.6.2",
+    "@tiptap/extension-text-style": "^3.6.2",
+    "@tiptap/react": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.2",
     "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
     "next": "15.3.2",
@@ -16,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-imask": "^7.6.1",
+    "react-quill": "^2.0.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
@@ -29,5 +36,5 @@
     "eslint-config-next": "15.3.2",
     "typescript": "^5.8.3"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "packageManager": "pnpm@10.17.1"
 }
